random css trick to fix scrollbars

--- a/src/stylesheets/components/utilities/Page.sass
+++ b/src/stylesheets/components/utilities/Page.sass
@@ -28,9 +28,10 @@
   z-index: 0
   display: flex
   flex-direction: column
-  flex: 1 1 calc(100% - 50px)
+  flex: 1 1 calc(100% - 60px)
   margin-top: 20px
   padding: 0 0px 20px 20px
+  overflow: hidden
   @media screen and (max-width: $width-small)
     padding: 0 5px
     margin-top: 5px
